@@ -2,25 +2,26 @@ version = "${jenieSpringHelloworldArmeriaGrpcVersion}"
 
 dependencies {
 	implementation platform("com.linecorp.armeria:armeria-bom:${armeriaVersion}")
-	implementation 'com.linecorp.armeria:armeria-spring-boot3-starter'
+	implementation 'com.linecorp.armeria:armeria-spring-boot4-starter'
 	implementation 'com.linecorp.armeria:armeria-grpc'
 	implementation "io.projectreactor:reactor-core:${projectReactorVersion}"
 	implementation("org.springframework.boot:spring-boot-starter-data-mongodb")
-
-	implementation "org.hibernate.validator:hibernate-validator:${hibernateValidatorVersion}"
 
 	implementation(project(":jenie-spring-helloworld-web"))
 }
 
 jib {
 	from {
-		image = 'eclipse-temurin:21'
+		image = 'eclipse-temurin:25'
+	}
+	container {
+		jvmFlags = ['--enable-native-access=ALL-UNNAMED']
 	}
 	to {
 		image = 'ghcr.io/thinkhard-j-park/jenie-spring-helloworld-armeria-grpc'
 		auth {
-			username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
-			password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
+			username = project.findProperty("gpr.user")?.toString() ?: System.getenv("GITHUB_ACTOR") ?: ''
+			password = project.findProperty("gpr.key")?.toString() ?: System.getenv("GITHUB_TOKEN") ?: ''
 		}
 		tags = ["${version}.${new Date().format("yyyy-MM-dd-HH-mm-ss")}", 'latest']
 	}
